# ChangeLog for net-p2p/bittornado
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/ChangeLog,v 1.71 2011/03/28 20:31:43 arfrever Exp $

  28 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  bittornado-0.3.18-r2.ebuild:
  Use Python 2 (bug #315857).

  17 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  bittornado-0.3.18-r2.ebuild:
  Remove blocker on net-p2p/bittorrent, they don't collide

*bittornado-0.3.18-r2 (16 Jan 2008)

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  -bittornado-0.3.18-r1.ebuild, +bittornado-0.3.18-r2.ebuild:
  Remove virtual/bittorrent

  07 Dec 2007; Santiago M. Mola <coldwind@gentoo.org>
  files/bittornado.desktop:
  .desktop file fixed.

*bittornado-0.3.18-r1 (04 Dec 2007)

  04 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  +files/bittornado-0.3.18-wxversion.patch,
  -files/bittornado-wxpython-pre2.5-fix.patch, -bittornado-0.3.18.ebuild,
  +bittornado-0.3.18-r1.ebuild:
  Add patch to use wxPython-2.6, by Ryan Hill <dirtyepic at gentoo dot org>,
  bug #201247 and remove ancient patch

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> bittornado-0.3.18.ebuild:
  Add missing DEPEND, bug #197089

  02 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> bittornado-0.3.18.ebuild:
  Lock wxpython to 2.6.  Fix quoting.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> -bittornado-0.3.15.ebuild,
  bittornado-0.3.18.ebuild:
  alpha stable wrt #166431

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> +files/bittornado.desktop,
  bittornado-0.3.15.ebuild, bittornado-0.3.18.ebuild:
  Use desktop files instead of a hack, bug 175472

  23 Mar 2007; Timothy Redaelli <drizzt@gentoo.org>
  bittornado-0.3.18.ebuild:
  Add ~x86-fbsd keyword.
  Thanks to our AT Nathan Smith for reporting wrt bug #171606

  24 Feb 2007; Raúl Porcel <armin76@gentoo.org> bittornado-0.3.15.ebuild,
  bittornado-0.3.18.ebuild:
  Remove ROOT, bug 168039
