@@ -7,13 +7,13 @@ AUX bttrack.conf 728 RMD160 c5c7438e64e335d40a33d685e9b0ee0824577ceb SHA1 fbc4cf
 AUX bttrack.rc 631 RMD160 72d3594c01896167e70f568710cf076d2c469979 SHA1 5a4c2b0e95bb6a2c0b73dedf68456ce3bd21d6c6 SHA256 a28cb3b55c7acc0a4f9c0ce0802eb5d579eb5c0f8ddc028fbad380bc5f89f6ae
 AUX favicon.ico 1406 RMD160 735b7ee87f222400b294866e323b281b4e9cdd70 SHA1 3fade857763dd8b603c32080c2a29542973c0dd7 SHA256 ae5728b520add5961a8b7f8300058bf9571b9b14dba96dfaf64520d089e56c22
 DIST BitTornado-0.3.18.tar.gz 189227 RMD160 77e61f01101c2878d4e993e0581365a71c375892 SHA1 64c65b69d112f76ba8a024ff5b8671058130b71a SHA256 d9e6ad0bf5b2e9820bab809c5a4fcd94e844a57f396ac51547fe47dbe255d9e0
-EBUILD bittornado-0.3.18-r2.ebuild 1533 RMD160 4e23329b3c620757b38214b62154eb1b80831812 SHA1 00ff75117fae5ba811989fde88e363ceebfc8467 SHA256 68ac36e86970779cd39e6e64ffc533bd6c95b53bcf35ecc4ab8300690ca25fba
-MISC ChangeLog 9851 RMD160 6f19d6e6d389b663ba985d27d49b26d18c566b42 SHA1 504fbe4555418c20fca2fb603ef50121698f3c19 SHA256 024a8aba9f7cd839f1a6bf73fecc4328b0ba3fa2f2edc6bd038fc02e199c831a
+EBUILD bittornado-0.3.18-r2.ebuild 1392 RMD160 0103c198afe40acf4432bcab4e24d5c892e8e5ed SHA1 af62b2ad12cc43ee64ddd01bae4c67408fe2da0c SHA256 256f9db5ca79b606502ef46debb41a4dc3552ae4709f938de05ef525853e9a5e
+MISC ChangeLog 10175 RMD160 d6dc8e02a5cbab7ab2cce7ceaebee1ef55b13061 SHA1 1a9c0f087e154cc477a40412f2de28e773b952df SHA256 09f76d4f72885d1ab4e4739151a0f8c2fdb9c7fec6c4dd014d19177c5534fa58
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk6O4DEACgkQX3X2B8XHTomrwQCglLZTJ6QN4BDievQL1UqY7aC9
-2lQAnjVi3wmltdkkk1HkM7iD3WxRlazU
-=OpUk
+iEYEARECAAYFAk/ArRgACgkQX3X2B8XHTonIgQCcCG3RJQ+dIoGhD6XEDAyJDCKa
+CMAAn17uB73orcpjXUPNQREg78GT0BIL
+=RAMw
 -----END PGP SIGNATURE-----
