@@ -1,14 +1,17 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/bittornado-0.3.18-r2.ebuild,v 1.3 2011/03/28 20:31:43 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/bittornado-0.3.18-r2.ebuild,v 1.4 2011/12/09 15:44:21 ssuominen Exp $
 
-EAPI="3"
-PYTHON_DEPEND="2"
+# note: wxGTK interface has been removed wrt #391685. this ebuild is only for
+# cmdline tools as is.
+
+EAPI=3
+PYTHON_DEPEND=2
 
 inherit distutils eutils
 
-MY_PN="BitTornado"
-MY_P="${MY_PN}-${PV}"
+MY_PN=BitTornado
+MY_P=${MY_PN}-${PV}
 
 DESCRIPTION="TheShad0w's experimental BitTorrent client"
 HOMEPAGE="http://www.bittornado.com/"
@@ -17,16 +20,15 @@ LICENSE="MIT"
 SLOT="0"
 
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="gtk"
+IUSE=""
 
-RDEPEND="gtk? ( =dev-python/wxpython-2.6* )
-	dev-python/pycrypto"
+RDEPEND="dev-python/pycrypto"
 DEPEND="${RDEPEND}
 	app-arch/unzip
 	>=sys-apps/sed-4.0.5"
 
-S="${WORKDIR}/${MY_PN}-CVS"
-PIXMAPLOC="/usr/share/pixmaps/bittornado"
+S=${WORKDIR}/${MY_PN}-CVS
+PIXMAPLOC=/usr/share/pixmaps/bittornado
 
 pkg_setup() {
 	python_set_active_version 2
@@ -45,17 +47,8 @@ src_prepare() {
 src_install() {
 	distutils_src_install
 
-	if use gtk; then
-		dodir ${PIXMAPLOC}
-		insinto ${PIXMAPLOC}
-		doins icons/*.ico icons/*.gif
-	else
-		# get rid of any reference to the not-installed gui version
-		rm "${ED}"/usr/bin/*gui.py
-	fi
-
-	newicon "${FILESDIR}"/favicon.ico ${PN}.ico
-	domenu "${FILESDIR}"/bittornado.desktop
+	# get rid of any reference to the not-installed gui version
+	rm "${ED}"/usr/bin/*gui.py
 
 	newconfd "${FILESDIR}"/bttrack.conf bttrack
 	newinitd "${FILESDIR}"/bttrack.rc bttrack
