@@ -1,6 +1,15 @@
 # ChangeLog for net-p2p/bittornado
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/ChangeLog,v 1.71 2011/03/28 20:31:43 arfrever Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/ChangeLog,v 1.73 2012/03/19 13:08:28 pacho Exp $
+
+  19 Mar 2012; Pacho Ramos <pacho@gentoo.org> -files/bittornado.desktop,
+  -files/favicon.ico:
+  Drop files no longer needed, also fix #373265.
+
+  09 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
+  bittornado-0.3.18-r2.ebuild:
+  Remove deprecated wxGTK 2.6 support wrt #391685. This ebuild is now only for
+  cmdline tools.
 
   28 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   bittornado-0.3.18-r2.ebuild:
